--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,8 +11,10 @@
 .App {
     background-color: #f7f7f7;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    gap: 30px;
+    padding: 20px;
 }
