--- a/client/src/components/CSS/Amount.css
+++ b/client/src/components/CSS/Amount.css
@@ -1,17 +1,11 @@
 .container {
-  height: max-content;
+  padding: 10px;
 }
 
 h1 {
   letter-spacing: 1px;
   margin: 0;
   color: #2e75cc;
-}
-
-h3 {
-  border-bottom: 1px solid #bbb;
-  padding-bottom: 10px;
-  margin: 40px 0 10px;
 }
 
 h4 {
@@ -22,7 +16,6 @@ h4 {
 .inc-exp-container {
   background-color: #fff;
   box-shadow: var(--box-shadow);
-  padding: 20px;
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
@@ -51,11 +44,6 @@ h4 {
   color: #c0392b;
 }
 
-label {
-  display: inline-block;
-  margin: 10px 0;
-}
-
 input[type="text"],
 input[type="number"] {
   border: 1px solid #dedede;
@@ -74,70 +62,21 @@ input[type="number"] {
   border: 0;
   display: block;
   font-size: 16px;
-  margin: 10px 0 30px;
-  padding: 10px;
+  margin: 5px 0;
+  padding: 5px;
   width: 100%;
+  text-align: center;
 }
 
-.btn:focus,
-.delete-btn:focus {
+.btn:focus {
   outline: 0;
 }
 
-.transactions {
-  list-style-type: none;
-  padding: 0;
-  margin-bottom: 40px;
-}
-
-.transactions li {
-  background-color: #fff;
-  box-shadow: var(--box-shadow);
-  color: #333;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  padding: 10px;
-  margin: 10px 0;
-}
-
-.transactions li.plus {
-  border-right: 5px solid #2ecc71;
-}
-
-.transactions li.minus {
-  border-right: 5px solid #c0392b;
-}
-
-.delete-btn {
-  cursor: pointer;
-  background-color: #e74c3c;
-  border: 0;
-  color: #fff;
-  font-size: 20px;
-  line-height: 20px;
-  padding: 2px 5px;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translate(-100%, -50%);
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.transactions li:hover .delete-btn {
-  opacity: 1;
-}
-
-.amount {
-  display: flex;
-  justify-content: space-between;
-}
-
-.lista-desejos {
-
+.form-produto {
 }
 
 .renda-despesas {
-
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
 }
