--- a/client/src/components/CSS/products.css
+++ b/client/src/components/CSS/products.css
@@ -1,19 +1,16 @@
 .products {
-    background-color: #9c88ff80;
-    width: 25rem;
-    padding: .5rem .5rem;
-    border-radius: 10px;
-    margin: 1rem 0;
-    position: relative;
-}
-
-.products p {
-    width: max-content;
+  display: block;
+  background-color: #9c88ff80;
+  width: 80%;
+  padding: 0.5rem 0.5rem;
+  border-radius: 10px;
+  margin: 1rem 0;
+  position: relative;
 }
 
 .delete--item {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
