--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,10 +11,11 @@
 .App {
     background-color: #f7f7f7;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     gap: 30px;
     padding: 20px;
 }
