--- a/client/src/components/CSS/ListProduct.css
+++ b/client/src/components/CSS/ListProduct.css
@@ -1,11 +1,26 @@
+.product--list {
+  width: 30%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  overflow-y: scroll;
+}
+
 .product-list-mobile--btn {
   position: absolute;
   top: 0;
   right: 0;
 }
 
-.product--list {
-  width: 40%;
+.totalAmount {
+  font-weight: bold;
+  font-style: italic;
+}
+
+.totalAmount span {
+  color: rgb(203, 22, 22);
 }
 
 @media (max-width: 767px) {
@@ -18,21 +33,18 @@
     background-color: #4f4f4f;
     width: 70%;
     height: 100%;
-    padding: 20px;
     overflow-y: scroll;
   }
 }
-
-.product--list-display {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50%;
-  max-width: 30rem;
-  height: 100%;
-  overflow: auto;
-  padding-top: 50px;
-}
+  .product--list-display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    max-width: 30rem;
+    height: 100%;
+    overflow: auto;
+  }
 
 @media (min-width: 767px) {
   .product-list-mobile--btn {
